Removed kotlinc. It is now downloaded during the build process and we track the supported version in build-definitions.xml. Also refactored all ant scripts to make them simpler.