@@ -9,72 +9,103 @@
 
 	<!-- Initialize build -->
 	<target name="-initialize" description="Initializes the directories required by the build process.">
-		<mkdir dir="${lwjgl.bin.core}" taskname="Core"/>
-		<mkdir dir="${lwjgl.bin.util}" taskname="Utilities"/>
-		<mkdir dir="${lwjgl.bin.templates}" taskname="Templates"/>
-		<mkdir dir="${lwjgl.bin.tests}" taskname="Tests"/>
-		<mkdir dir="${lwjgl.bin.native}" taskname="bin"/>
+		<mkdir dir="${bin.core}"/>
+		<mkdir dir="${bin.util}"/>
+		<mkdir dir="${bin.templates}"/>
+		<mkdir dir="${bin.tests}"/>
+		<mkdir dir="${bin.native}"/>
 	</target>
 
 	<!-- Cleans up any files created during the execution of this script -->
 	<target name="clean" description="Cleans all directories controlled by this ant script" depends="clean-java, clean-native, clean-generated">
-		<delete dir="${lwjgl.bin}"/>
+		<delete dir="${bin}"/>
 	</target>
 
 	<target name="clean-generated" description="Cleans source files generated by this ant script" depends="clean-generated-java,clean-generated-native">
 		<!-- We track the generated directory in a separate repo, so don't delete. -->
-		<!--<delete dir="${lwjgl.generated}"/>-->
+		<!--<delete dir="${generated}"/>-->
 	</target>
 
 	<!-- Cleans up any non-native files created during the execution of this script -->
 	<target name="clean-java" description="Cleans non-native files generated by this ant script" depends="clean-generated-java">
 		<!-- Delete java classes only to avoid unnecessary native recompilation -->
-		<delete dir="${lwjgl.bin.core}"/>
-		<delete dir="${lwjgl.bin.util}"/>
-		<delete dir="${lwjgl.bin.templates}"/>
-		<delete dir="${lwjgl.bin.tests}"/>
+		<delete dir="${bin.core}"/>
+		<delete dir="${bin.util}"/>
+		<delete dir="${bin.templates}"/>
+		<delete dir="${bin.tests}"/>
 	</target>
 
 	<target name="clean-generated-java" description="Cleans Java source files generated by this ant script">
-		<delete dir="${lwjgl.generated}/java"/>
+		<delete dir="${generated}/java"/>
 	</target>
 
 	<!-- Useful when we need to force native recompilation -->
 	<target name="clean-native" description="Cleans native binary files generated by this ant script">
-		<delete dir="${lwjgl.bin.native}"/>
+		<delete dir="${bin.native}"/>
 	</target>
 
 	<target name="clean-generated-native" description="Cleans native source files generated by this ant script">
-		<delete dir="${lwjgl.generated}/native"/>
+		<delete dir="${generated}/native"/>
 	</target>
 
-	<target name="all">
-		<antcall target="compile-templates"/>
-		<antcall target="tests"/>
+	<target name="all" depends="compile-templates,tests"/>
+
+	<!-- Checks if the Kotlin compiler must be updated -->
+	<target name="-kotlinc-update">
+		<loadfile property="kotlinc-build-current" srcfile="${kotlinc}/build.txt" quiet="true" taskname="kotlinc"/>
+
+		<condition property="kotlinc-uptodate">
+			<and>
+				<isset property="kotlinc-build-current"/>
+				<equals arg1="${kotlinc-build-current}" arg2="${kotlinc-build}"/>
+			</and>
+		</condition>
 	</target>
 
-	<target name="compile-templates" description="Compiles the Templates module" depends="-initialize">
-		<javac debug="yes" destdir="${lwjgl.bin}/Templates" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath" taskname="Java dependencies compilation">
-			<src path="${lwjgl.src.templates}"/>
+	<!-- Downloads and extracts the Kotlin compiler. -->
+	<target name="-kotlinc-download" unless="kotlinc-uptodate">
+		<local name="kotlinc-archive"/>
+		<property name="kotlinc-archive" value="kotlin-compiler-${kotlinc-build}.zip"/>
+
+		<!-- Delete current build -->
+		<delete dir="${kotlinc}" taskname="kotlinc"/>
+		<!-- Download new build -->
+		<get src="http://teamcity.jetbrains.com/guestAuth/repository/download/bt345/${kotlinc-build}/${kotlinc-archive}" dest="${lib}" verbose="true" taskname="kotlinc"/>
+		<!-- Extract build -->
+		<unzip src="${lib}/${kotlinc-archive}" dest="${lib}" taskname="kotlinc"/>
+		<!-- Delete build archive -->
+		<delete file="${lib}/${kotlinc-archive}" taskname="kotlinc"/>
+
+		<echo message="The Kotlin compiler was updated to build: ${kotlinc-build}" taskname="kotlinc"/>
+	</target>
+
+	<target name="compile-templates" description="Compiles the Templates module" depends="-initialize,-kotlinc-update,-kotlinc-download">
+		<!-- Compile Java dependencies -->
+		<javac debug="yes" destdir="${bin}/Templates" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath" taskname="Java dependencies">
+			<src path="${src.templates}"/>
 			<include name="org/lwjgl/**"/>
 		</javac>
 
+		<!-- Compile Kotlin code -->
+		<echo message="Compiling Kotlin templates. This will take several seconds..." level="info" taskname="Templates"/>
 		<java
 			classname="org.jetbrains.jet.cli.jvm.K2JVMCompiler"
 			fork="true"
-		    failonerror="true"
-		    taskname="Compiling Templates module"
-		>
+			failonerror="true"
+			taskname="Templates"
+			>
 			<classpath>
-				<pathelement path="${kotlinc}/kotlin-compiler.jar"/>
+				<pathelement path="${kotlinc}/lib/kotlin-compiler.jar"/>
 			</classpath>
 
 			<jvmarg value="-server"/>
+			<jvmarg value="-Xms1024m"/>
+			<jvmarg value="-Xverify:none"/>
 
 			<arg value="-module"/>
 			<arg value="config/Templates.kts"/>
 			<arg value="-output"/>
-			<arg value="${lwjgl.bin.templates}"/>
+			<arg value="${bin.templates}"/>
 			<!--
 			<arg value="-tags"/>
 			<arg value="-verbose"/>
@@ -88,12 +119,12 @@
 			<arg value="-noJdkAnnotations"/>
 			<!--<arg value="-noJdk"/>-->
 		</java>
-		<!--<kotlinc module="config/Templates.kts" jar="${lwjgl.lib}/templates.jar" />-->
+		<!--<kotlinc module="config/Templates.kts" jar="${lib}/templates.jar" />-->
 	</target>
 
 	<target name="formatter" description="Runs the template formatter tool" depends="-initialize"> <!-- Removed "compile-templates" until Kotlin adds support for incremental compilation -->
-		<javac debug="yes" destdir="${lwjgl.bin}/Templates" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath" taskname="Java dependencies compilation">
-			<src path="${lwjgl.src.templates}"/>
+		<javac debug="yes" destdir="${bin}/Templates" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath">
+			<src path="${src.templates}"/>
 			<include name="org/lwjgl/**"/>
 		</javac>
 
@@ -103,22 +134,23 @@
 			spawn="true"
 			>
 			<classpath>
-				<pathelement path="${lwjgl.bin.templates}"/>
-				<pathelement path="${lwjgl.res}"/>
+				<pathelement path="${bin.templates}"/>
+				<pathelement path="${res}"/>
 			</classpath>
 		</java>
 	</target>
 
-	<target name="generate" description="Runs the code Generator" depends="-initialize"> <!-- Removed "compile-templates" until Kotlin adds support for incremental compilation -->
+	<target name="generate" description="Runs the code Generator"
+	        depends="-initialize"> <!-- Removed "compile-templates" until Kotlin adds support for incremental compilation -->
 		<java
 			classname="org.lwjgl.generator.GeneratorPackage"
 			fork="true"
 			failonerror="true"
-			taskname="Generating code"
+			taskname="Generator"
 			>
 			<classpath>
-				<pathelement path="${lwjgl.bin.templates}"/>
-				<pathelement path="${kotlinc}/kotlin-runtime.jar"/>
+				<pathelement path="${bin.templates}"/>
+				<pathelement path="${kotlinc}/lib/kotlin-runtime.jar"/>
 			</classpath>
 
 			<jvmarg value="-server"/>
@@ -126,66 +158,48 @@
 	</target>
 
 	<target name="compile" description="Compiles the Java source code" depends="generate">
-		<javac debug="yes" destdir="${lwjgl.bin}/Core" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath" taskname="Core java compilation" >
-			<src path="${lwjgl.src.core}"/>
-            <src path="${lwjgl.src.util}/"/>
-			<src path="${lwjgl.generated.java}"/>
+		<javac debug="yes" destdir="${bin}/Core" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath" taskname="Core">
+			<src path="${src.core}"/>
+			<src path="${src.util}/"/>
+			<src path="${generated.java}"/>
+			<classpath path="${lib}/disruptor.jar"/>
 			<include name="org/lwjgl/**"/>
-			<compilerarg value="-XDignore.symbol.file=true"/> <!-- Supresses internal API (e.g. Unsafe) usage warnings -->
+			<!-- Supresses internal API (e.g. Unsafe) usage warnings -->
+			<compilerarg value="-XDignore.symbol.file=true"/>
 		</javac>
 	</target>
 
-	<target name="compile-native" depends="-initialize, compile" description="Compiles the native source code">
-		<antcall target="-compile_native_linux"/>
-		<antcall target="-compile_native_macosx"/>
-		<antcall target="-compile_native_windows"/>
-	</target>
-
-	<target name="-compile_native_linux" if="lwjgl.platform.linux">
-		<ant antfile="config/linux/build.xml" inheritAll="false"/>
-		<copy todir="${lwjgl.lib}/linux">
-			<fileset dir="${lwjgl.bin.native}" includes="liblwjgl*.so"/>
-		</copy>
-	</target>
-
-	<target name="-compile_native_macosx" if="lwjgl.platform.macosx">
-		<ant antfile="config/macosx/build.xml" inheritAll="false"/>
-		<copy todir="${lwjgl.lib}/macosx">
-			<fileset dir="${lwjgl.bin.native}" includes="liblwjgl*.jnilib"/>
-		</copy>
-	</target>
-
-	<target name="-compile_native_windows" if="lwjgl.platform.windows">
-		<ant antfile="config/windows/build.xml" inheritAll="false"/>
-		<copy todir="${lwjgl.lib}/windows">
-			<fileset dir="${lwjgl.bin.native}" includes="lwjgl*.dll"/>
-		</copy>
+	<target name="compile-native" description="Compiles the native source code" depends="-initialize, compile">
+		<ant antfile="config/${platform}/build.xml" inheritAll="false"/>
 	</target>
 
 	<target name="compile-tests" description="Compiles the LWJGL test suite" depends="compile">
-		<javac debug="yes" destdir="${lwjgl.bin}/Tests" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath" taskname="Tests compilation">
+		<javac debug="yes" destdir="${bin.tests}" encoding="utf8" source="1.6" target="1.6" bootclasspathref="java6.boot.classpath" taskname="Tests">
 			<classpath>
-				<pathelement path="${lwjgl.bin.core}"/>
-				<pathelement path="${lwjgl.bin.util}"/>
-				<pathelement path="${lwjgl.lib}/testng.jar"/>
+				<pathelement path="${bin.core}"/>
+				<pathelement path="${bin.util}"/>
+				<pathelement path="${lib}/testng.jar"/>
 			</classpath>
 
-			<src path="${lwjgl.src}/tests/"/>
+			<src path="${src}/tests/"/>
 			<include name="org/lwjgl/**"/>
 		</javac>
 	</target>
 
 	<target name="tests" description="Runs the LWJGL test suite" depends="compile-tests, compile-native">
-		<testng outputDir="${lwjgl.tests.output}">
+		<testng outputDir="${tests.output}" taskname="Tests">
 			<classpath>
-				<pathelement path="${lwjgl.lib}/jcommander.jar"/>
-				<pathelement path="${lwjgl.bin.core}"/>
-				<pathelement path="${lwjgl.bin.util}"/>
-				<pathelement path="${lwjgl.res}"/>
-				<pathelement path="${lwjgl.bin.tests}"/>
+				<pathelement path="${lib}/jcommander.jar"/>
+				<pathelement path="${bin.core}"/>
+				<pathelement path="${bin.util}"/>
+				<pathelement path="${res}"/>
+				<pathelement path="${bin.tests}"/>
 			</classpath>
-			<xmlfileset dir="config" includes="tests.xml,tests_${lwjgl.platform}.xml"/>
-			<jvmarg value="-Djava.library.path=${lwjgl.lib.bin}"/>
+			<xmlfileset dir="config" includes="tests.xml,tests_${platform}.xml"/>
+			<jvmarg value="-Xcheck:jni"/>
+			<jvmarg value="-ea"/>
+			<jvmarg value="-Dorg.lwjgl.util.Debug=true"/>
+			<jvmarg value="-Djava.library.path=${lib.bin}"/>
 		</testng>
 	</target>
 
